[ADD]채굴부스터 기능 추가
